[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Scripts/Experimental/Card Dock.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 332.142, 90.5178 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.337255, 0.6, 0.156863, 1 )

[node name="Dock" type="Area2D"]
input_pickable = false
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 677.0
margin_bottom = 212.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstSpot" type="Position2D" parent="."]
position = Vector2( 76.593, 115.395 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 338.622, 114.277 )
shape = SubResource( 1 )

[node name="BaseCardButton" type="Button" parent="."]
margin_right = 71.0
margin_bottom = 20.0
custom_styles/normal = SubResource( 2 )
text = "Base Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondSpot" type="Position2D" parent="."]
position = Vector2( 200.806, 116.674 )

[node name="ThirdSpot" type="Position2D" parent="."]
position = Vector2( 317.48, 119.055 )

[node name="FourthSpot" type="Position2D" parent="."]
position = Vector2( 428.598, 113.499 )

[node name="FifthSpot" type="Position2D" parent="."]
position = Vector2( 562.734, 116.674 )

[node name="OtherBaseCardButton" type="Button" parent="."]
margin_left = 74.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 21.0
text = "Other Base"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Dock_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dock_body_exited"]
